--- a/valuetransfer/src/main/res/layout/dialog_contact_add.xml
+++ b/valuetransfer/src/main/res/layout/dialog_contact_add.xml
@@ -58,7 +58,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/clMyQRCode"
                 android:layout_width="0dp"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/pill_rounded"
                 android:backgroundTint="@color/light_gray"
                 android:layout_marginTop="4dp"
@@ -69,7 +69,8 @@
                 <ImageView
                     android:id="@+id/ivMyQRCode"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="0dp"
+                    android:padding="20dp"
                     app:layout_constraintDimensionRatio="H,1:1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:paddingStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/text_paste_publickey_or_name"
+                android:text="@string/text_paste_publickey_or_nickname"
                 android:textColor="?attr/onDialogColor"
                 android:textSize="12sp"
                 android:textStyle="italic"
@@ -179,7 +180,7 @@
                 android:textSize="14sp"
                 android:textColor="@color/black"
                 android:textColorHint="@color/gray"
-                android:hint="@string/text_contact_name"
+                android:hint="@string/text_contact_nickname"
                 android:importantForAutofill="no"
                 app:layout_constraintEnd_toStartOf="@+id/btnAddContact"
                 app:layout_constraintStart_toEndOf="@+id/clScanQRCode"
