--- a/valuetransfer/src/main/res/layout/fragment_identity.xml
+++ b/valuetransfer/src/main/res/layout/fragment_identity.xml
@@ -1,150 +1,204 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
+    android:orientation="vertical">
 
-    <ScrollView
+    <TextView
+        style="@style/FragmentTitle"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:paddingBottom="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Identity Details" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvIdentities"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        tools:itemCount="1"
+        tools:listitem="@layout/item_identity_detail" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp">
+
+        <TextView
+            style="@style/FragmentTitle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="Identity Extensions" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvIdentities"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:itemCount="1"
-                tools:listitem="@layout/item_identity_detail" />
+        <ImageView
+            android:id="@+id/ivAddAttributeAttestation"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:padding="4dp"
+            android:src="@drawable/ic_add_black_24dp"
+            app:tint="?attr/mutedColor" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/square_stroked"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/llTabChooser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/square_rounded"
+            android:backgroundTint="?attr/widgetColor"
+            android:padding="4dp"
+            android:weightSum="2"
+            app:layout_constraintTop_toBottomOf="@+id/rvIdentities">
 
             <TextView
-                android:id="@+id/tvAttributesTitle"
-                style="@style/FragmentTitle"
+                android:id="@+id/tvShowIdentityAttributes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/pill_rounded_selected"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:paddingHorizontal="8dp"
+                android:paddingVertical="4dp"
+                android:text="Identity Attributes"
+                android:textColor="?attr/onWidgetColor"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvShowAttestations"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/pill_rounded"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:paddingHorizontal="8dp"
+                android:paddingVertical="4dp"
+                android:text="@string/text_title_attestations"
+                android:textColor="?attr/onWidgetColor" />
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="8dp">
+
+            <TextView
+                android:id="@+id/tvAttributesInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_tooltip_identity_attributes"
+                android:textColor="?attr/onBackgroundColor"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/tvAttestationInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/text_title_identity_attributes"
-                app:layout_constraintEnd_toStartOf="@+id/ivAttributesInfoIcon"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rvIdentities" />
+                android:text="@string/text_tooltip_attestations"
+                android:textColor="?attr/onBackgroundColor"
+                android:textStyle="italic"
+                android:visibility="gone"/>
 
-            <ImageView
-                android:id="@+id/ivAttributesInfoIcon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="8dp"
-                android:padding="4dp"
-                android:src="@drawable/ic_baseline_info_24"
-                app:tint="?attr/mutedColor"
-                android:tooltipText="@string/text_tooltip_identity_attributes"
-                app:layout_constraintBottom_toBottomOf="@+id/tvAttributesTitle"
-                app:layout_constraintStart_toEndOf="@+id/tvAttributesTitle"
-                app:layout_constraintTop_toTopOf="@+id/tvAttributesTitle" />
+        </FrameLayout>
+    </LinearLayout>
 
-            <ImageView
-                android:id="@+id/ivAddAttribute"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginEnd="12dp"
-                android:padding="4dp"
-                android:src="@drawable/ic_add_black_24dp"
-                app:tint="?attr/mutedColor"
-                app:layout_constraintBottom_toBottomOf="@+id/tvAttributesTitle"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tvAttributesTitle" />
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/clIdentityAttributes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvNoAttributes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginHorizontal="20dp"
-                android:background="@drawable/pill_rounded"
-                android:paddingVertical="4dp"
+                android:layout_marginHorizontal="12dp"
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="8dp"
                 android:text="@string/text_no_attributes"
                 android:textColor="?attr/onBackgroundColor"
                 android:textStyle="italic"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvAttributesTitle"
+                app:layout_constraintTop_toBottomOf="@+id/tvAttributesInfo"
                 tools:visibility="visible" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvAttributes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="12dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvNoAttributes"
                 tools:itemCount="1"
                 tools:listitem="@layout/item_identity_attribute" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
-            <TextView
-                android:id="@+id/tvAttestationsTitle"
-                style="@style/FragmentTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_title_attestations"
-                app:layout_constraintEnd_toStartOf="@+id/ivAttestationsInfoIcon"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rvAttributes" />
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/clAttestations"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible">
 
-            <ImageView
-                android:id="@+id/ivAttestationsInfoIcon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="8dp"
-                android:padding="4dp"
-                android:src="@drawable/ic_baseline_info_24"
-                app:tint="?attr/mutedColor"
-                android:tooltipText="@string/text_tooltip_attestations"
-                app:layout_constraintBottom_toBottomOf="@+id/tvAttestationsTitle"
-                app:layout_constraintStart_toEndOf="@+id/tvAttestationsTitle"
-                app:layout_constraintTop_toTopOf="@+id/tvAttestationsTitle" />
-
-            <ImageView
-                android:id="@+id/ivAddAttestationAuthority"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginEnd="12dp"
-                android:padding="4dp"
-                android:src="@drawable/ic_add_black_24dp"
-                app:tint="?attr/mutedColor"
-                app:layout_constraintBottom_toBottomOf="@+id/tvAttestationsTitle"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tvAttestationsTitle" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvNoAttestations"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginHorizontal="20dp"
-                android:background="@drawable/pill_rounded"
-                android:paddingVertical="4dp"
+                android:layout_marginHorizontal="12dp"
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="8dp"
                 android:text="@string/text_no_attestations"
                 android:textColor="?attr/onBackgroundColor"
                 android:textStyle="italic"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvAttestationsTitle"
+                app:layout_constraintTop_toBottomOf="@+id/tvAttestationInfo"
                 tools:visibility="visible" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvAttestations"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="12dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvNoAttestations"
                 tools:itemCount="1"
                 tools:listitem="@layout/item_identity_attestation" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
+</LinearLayout>
