--- a/valuetransfer/src/main/res/layout/item_contacts.xml
+++ b/valuetransfer/src/main/res/layout/item_contacts.xml
@@ -12,11 +12,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <FrameLayout
-            android:id="@+id/flIdenticon"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvContactImage"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="5dp"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="@dimen/cornerRadius"
             android:background="@drawable/pill_rounded"
             android:backgroundTint="?attr/backgroundColor"
             app:layout_constraintEnd_toEndOf="parent"
@@ -27,8 +29,21 @@
                 android:id="@+id/ivIdenticon"
                 android:layout_width="@dimen/identiconWidth"
                 android:layout_height="@dimen/identiconHeight"
-                android:layout_gravity="center" />
-        </FrameLayout>
+                android:layout_gravity="center"
+                android:visibility="gone"
+                tools:visibility="visible"/>
+
+            <ImageView
+                android:id="@+id/ivContactImage"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:layout_gravity="center"
+                tools:src="@drawable/ic_contact"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"/>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tvContactName"
@@ -46,7 +61,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/flIdenticon" />
+            app:layout_constraintTop_toBottomOf="@+id/cvContactImage" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
