--- a/valuetransfer/src/main/res/layout/item_identity_attestation_authorities.xml
+++ b/valuetransfer/src/main/res/layout/item_identity_attestation_authorities.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="4dp"
-    android:background="?attr/widgetColor">
+    android:background="@drawable/pill_rounded"
+    android:backgroundTint="?attr/widgetColor"
+    android:layout_marginBottom="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clIdentityCard"
