--- a/valuetransfer/src/main/res/layout/item_identity_attribute.xml
+++ b/valuetransfer/src/main/res/layout/item_identity_attribute.xml
@@ -19,28 +19,53 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/ivAttributeIcon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_attribute"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="?attr/mutedLightColor" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clChatContentOverview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/ivAttributeIcon"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/tvAttributeName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:textColor="?attr/onWidgetColor"
                 android:ellipsize="end"
                 android:maxLines="1"
+                android:textColor="?attr/onWidgetColor"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/clAllAttributeOptions"
+                app:layout_constraintEnd_toStartOf="@+id/tvIdentityAttributeDate"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Address" />
+
+            <TextView
+                android:id="@+id/tvAttributeDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:ellipsize="end"
+                android:gravity="end|center_vertical"
+                android:maxLines="2"
+                android:textColor="?attr/onWidgetSecondaryColor"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                app:layout_constraintEnd_toStartOf="@+id/clAllAttributeOptions"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="01-01-2000" />
 
             <TextView
                 android:id="@+id/tvAttributeValue"
