--- a/valuetransfer/src/main/res/navigation/nav_graph_valuetransfer.xml
+++ b/valuetransfer/src/main/res/navigation/nav_graph_valuetransfer.xml
@@ -8,6 +8,24 @@
     <fragment
         android:id="@+id/walletOverviewFragment"
         android:name="nl.tudelft.trustchain.valuetransfer.ui.walletoverview.WalletOverviewFragment"
-        android:label="Wallet"
+        android:label="@string/menu_navigation_wallet_overview"
         tools:layout="@layout/fragment_wallet_vt" />
+
+    <fragment
+        android:id="@+id/identityFragment"
+        android:name="nl.tudelft.trustchain.valuetransfer.ui.identity.IdentityFragment"
+        android:label="@string/menu_navigation_identity"
+        tools:layout="@layout/fragment_identity" />
+
+    <fragment
+        android:id="@+id/exchangeFragment"
+        android:name="nl.tudelft.trustchain.valuetransfer.ui.exchange.ExchangeFragment"
+        android:label="@string/menu_navigation_exchange"
+        tools:layout="@layout/fragment_exchange" />
+
+    <fragment
+        android:id="@+id/contactsFragment"
+        android:name="nl.tudelft.trustchain.valuetransfer.ui.contacts.ContactsFragment"
+        android:label="@string/menu_navigation_identity"
+        tools:layout="@layout/fragment_contacts" />
 </navigation>
