--- a/valuetransfer/src/main/res/layout/item_identity_detail.xml
+++ b/valuetransfer/src/main/res/layout/item_identity_detail.xml
@@ -198,61 +198,75 @@
 
         <FrameLayout
             android:id="@+id/flRowIdentityImage"
-            android:layout_width="50dp"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/clRowExtra"
             android:layout_alignBottom="@+id/clRowExtra"
             android:layout_alignParentStart="true"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="4dp">
+            android:layout_marginEnd="8dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvIdentityImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/transparent"
             app:cardElevation="0dp"
             app:cardCornerRadius="@dimen/cornerRadius">
 
-                <FrameLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/flIdentityImage"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/pill_rounded">
+
+                    <FrameLayout
+                        android:id="@+id/flImages"
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent">
 
                     <ImageView
                         android:id="@+id/ivIdentityIdenticon"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:padding="8dp"
-                        android:background="@drawable/pill_rounded"
-                        android:backgroundTint="?attr/backgroundColor"
+                        app:layout_constraintDimensionRatio="H,1:1"
+                        android:background="?attr/backgroundColor"
                         tools:src="@drawable/ic_contact"
                         android:adjustViewBounds="true"
-                        android:layout_gravity="center"
                         android:visibility="gone"
                         tools:visibility="visible" />
 
                     <ImageView
                         android:id="@+id/ivIdentityImage"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        app:layout_constraintDimensionRatio="H,1:1"
                         tools:src="@drawable/ic_contact"
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
-                        android:layout_gravity="center"
                         android:visibility="gone"
                         tools:visibility="visible" />
 
-                    <ImageView
-                        android:id="@+id/ivIdentityImageOptions"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:padding="15dp"
-                        android:src="@drawable/ic_camera"
-                        app:tint="?attr/colorAccent"
-                        android:alpha="0.4"
-                        android:background="@color/white"/>
+                    </FrameLayout>
 
-                </FrameLayout>
+                    <TextView
+                        android:id="@+id/ivIdentityImageOptions"
+                        android:layout_width="70dp"
+                        android:layout_height="20dp"
+                        android:text="@string/text_edit"
+                        android:textSize="12sp"
+                        android:textColor="@color/white"
+                        android:gravity="center"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/flImages"
+                        android:background="?attr/colorAccent"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
 
