--- a/valuetransfer/src/main/res/menu/contact_chat_options_no_contact.xml
+++ b/valuetransfer/src/main/res/menu/contact_chat_options_no_contact.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/actionViewContact"
+        android:icon="@drawable/ic_contact"
+        android:title="View Contact" />
+    <item
         android:id="@+id/actionSearchFilterChat"
         android:icon="@drawable/ic_search_filter"
         android:title="@string/text_search_filter_chat" />
