--- a/data-vault/src/main/res/layout/vault_file_item.xml
+++ b/data-vault/src/main/res/layout/vault_file_item.xml
@@ -15,6 +15,8 @@
         <TextView
             android:id="@+id/fileName"
             android:text="test text"
+            android:textSize="18dp"
+            android:padding="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
