--- a/data-vault/src/main/res/navigation/nav_graph_datavault.xml
+++ b/data-vault/src/main/res/navigation/nav_graph_datavault.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/vaultBrowserFragment">
 
     <fragment
-        android:id="@+id/mainFragment"
-        android:name="nl.tudelft.trustchain.datavault.ui.MainFragment"
-        android:label="Main">
+        android:id="@+id/vaultBrowserFragment"
+        android:name="nl.tudelft.trustchain.datavault.ui.VaultBrowserFragment"
+        android:label="Vault Browser">
     </fragment>
 </navigation>
